# rarimo-issuer-risc0

./: .gitignore  BENCHMARK.md  Cargo.toml  LICENSE  Makefile  README.md
core/: Cargo.toml
core/src/: lib.rs  utils.rs
host/: Cargo.toml
host/sage/: generate_input.sage  generate_input.sage.py
host/src/: main.rs
host/test_values/: expected_journal.json  expected_journal_20240716_193729.json  expected_journal_20240717_130851.json  input.json  input_20240716_193729.json  input_20240717_130851.json
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
