[package]
name = "issuer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
risc0-zkp = { version = "1.0.2", default-features = false }
risc0-zkvm = { version = "1.0.2", default-features = false, features = ['std'] }
digest = "0.10.7"
hex = "0.4.3"