[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.0.1" }
risc0-zkp = { version = "1.0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# serde = "1.0.204"
issuer-core = {path = "./../core"}