[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.0.2" }
risc0-zkp = { version = "1.0.2", default-features = false }

methods = { path = "../methods" }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
issuer-core = {path = "./../core"}
structopt = "0.3.26"
serde_json = "1.0.120"